# Animation-of-flags

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main
dependencies/include/GLAD/: cmake_install.cmake
dependencies/include/Hydra/: cmake_install.cmake
dependencies/include/TinyGLTF/: cmake_install.cmake
dependencies/include/TinyXML2/: cmake_install.cmake
shaders/: simple.frag  simple.vert
src/: main.cpp  renderer.cpp  renderer.h
