cmake_minimum_required(VERSION 3.7)

project(main)

cmake_policy(SET CMP0072 NEW)

find_package(SDL2 REQUIRED)
find_package(OpenGL REQUIRED)
find_package(GLEW REQUIRED)

find_library(SDL2_IMAGE_LIBRARY SDL2_image)
message(SDL2_IMAGE_LIBRARY=${SDL2_IMAGE_LIBRARY})

find_library(SDL2_MIXER_LIBRARY SDL2_mixer)
message(SDL2_MIXER_LIBRARY=${SDL2_MIXER_LIBRARY})

message(opgllib = ${OPENGL_LIBRARY} ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARY} ${GLEW_LIBRARIES}  ${CMAKE_DL_LIBS})
message(include =  ${OPENGL_INCLUDE_DIRS} ${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS})
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-O1 ")
set(TINYLINK "-lX11 -lpthread -lSDL2 -lSDL2_image -lSDL2_mixer -lGL -lGLEW")
set(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${TINYLINK}")

include_directories(${OPENGL_INCLUDE_DIRS} ${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS})
file(GLOB_RECURSE SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "src/*.cpp")
file(GLOB_RECURSE C_SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "src/*.c")
add_executable(main ${SOURCES} ${C_SOURCES})
target_link_libraries(main ${OPENGL_LIBRARY} ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARY} ${GLEW_LIBRARIES}  ${CMAKE_DL_LIBS} 
                           ${SDL2_MIXER_LIBRARY} )

